# intro2testing

./: .travis.yml  README.md  pyproject.toml  requirements.txt
.github/: main.yml
.github/workflows/: main.yml  python-app.yml
best_science_ever/: best_science_ever.py  test.py  test.sh
best_science_ever/tests/: test_best_science_ever.py
code/: best_science_ever.py  test.sh  test_data.csv
